<resources>
    <string name="app_name">laboratorio02hs</string>
    <string name="bmi">BMI</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="placeholder_edit_text1">70</string>
    <string name="placeholder_edit_text2">180</string>
    <string name="height">Height</string>
    <string name="cm">Cm</string>
    <string name="result">Result</string>
    <string name="status">status</string>
    <string name="info">info</string>

</resources>